feat: add `Project.latestRelease` to track latest release (#1048)
Fixes #1037
Fixes #1033
